@@ -1,4 +1,8 @@
-﻿drkns 28.04.2016 16:52:55 +0200 - build 4645
+﻿drkns 28.04.2016 19:06:43 +0200 - build 4646
+
+1. Продолжение 4631 - уберём ненужные блокировки окон.
+
+drkns 28.04.2016 16:52:55 +0200 - build 4645
 
 1. Уточнение 4644.
 
